# sysy-analyzer

./: .gitignore  .vscodeignore  LICENSE  README  language-configuration.json  package-lock.json  package.json
client/: language-configuration.json  package-lock.json  package.json
client/src/: extension.ts
docs/: development_plan.md  semantic_model.md
server/: Cargo.toml  package-lock.json  package.json
server/src/: initialize.ts  log.ts  main.rs  server.ts  treap_list.rs
server/src/backend/: completion_reqs.rs  definition_reqs.rs  file_reqs.rs  hover_req.rs  mod.rs  semantic_reqs.rs
server/src/backend/document_handler/: incremental_update.rs  mod.rs  query_definition.rs  query_symbols.rs  query_token.rs  semantic.rs
server/src/backend/document_handler/semantic/: mod.rs  semantic_pass.rs  semantic_token.rs  symtable.rs
server/tree-sitter-sysy-parser/: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
server/tree-sitter-sysy-parser/bindings/c/: tree-sitter-sysy-parser.pc.in
server/tree-sitter-sysy-parser/bindings/go/: binding.go  binding_test.go
server/tree-sitter-sysy-parser/bindings/node/: binding.cc  index.js
server/tree-sitter-sysy-parser/bindings/python/tests/: test_binding.py
server/tree-sitter-sysy-parser/bindings/python/tree_sitter_sysy_parser/: __init__.py  binding.c
server/tree-sitter-sysy-parser/bindings/rust/: Cargo.toml  build.rs  lib.rs
server/tree-sitter-sysy-parser/bindings/swift/TreeSitterSysyParser/: sysy_parser.h
server/tree-sitter-sysy-parser/bindings/swift/TreeSitterSysyParserTests/: TreeSitterSysyParserTests.swift
syntaxes/: sysy.tmLanguage.json
