[package]
name = "sysy-analyzer-server"
version = "0.0.1"
edition = "2021"

[dependencies]
dashmap = "6.1.0"
tokio = { version = "1.45.0", features = ["full"] }
tower-lsp = "0.20.0"
tree-sitter = "0.25.4"
tree-sitter-sysy-parser = { path = "./tree-sitter-sysy-parser/bindings/rust" }

[build-dependencies]
cc="*"