[package]
name = "tree-sitter-sysy-parser"
description = "A simple parser for sysy language"
version = "0.1.0"
authors = ["jhzhics <zhangjiahao2022@stu.pku.edu.cn>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "sysy-parser"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/jhzhics/sysy-analyzer.git"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.4"
