[package]
name = "tree-sitter-sysy-parser"
description = "SySy grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "sysy"]
categories = ["parsing", "text-editors"]
edition = "2021"

build = "build.rs"

[lib]
path = "lib.rs"

[dependencies]
tree-sitter-language = "0.1.5"

[build-dependencies]
cc = "1.0"
